# CronPilot

./: README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: index.html
scripts/: release.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  menu.rs  models.rs  runner.rs
src-tauri/src/commands/: cron_expr.rs  crontab.rs  jobs.rs  logs.rs  mod.rs  settings.rs
src-tauri/tests/: db_integration.rs
src/api/: cronExpr.ts  jobs.ts  logs.ts
src/components/: DonationDialog.tsx  HowItWorksDialog.tsx  ReconcileDialog.tsx  UpdateToast.tsx
src/components/jobs/: JobFormDialog.tsx  RunLogDialog.tsx
src/components/layout/: AppLayout.tsx  ConflictBanner.tsx  Header.tsx  Sidebar.tsx
src/hooks/: useJobs.ts  useMenuEvents.ts
src/i18n/: index.ts
src/i18n/locales/en/: common.json  cronBuilder.json  jobs.json
src/i18n/locales/zh/: common.json  cronBuilder.json  jobs.json
src/lib/: utils.ts
src/pages/: DashboardPage.tsx  HelpPage.tsx  JobsPage.tsx  SettingsPage.tsx
src/store/: appStore.ts
src/types/: job.ts
