[package]
name = "cronpilot"
version = "1.0.0"
description = "A local crontab UI management tool"
authors = ["gefangshuai"]
edition = "2021"

[lib]
name = "cronpilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
croner = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["process", "io-util", "macros"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
